feat: add DeleteURL handler
